classDiagram
    direction LR

    class Ticker {
        +index: int
        +symbol: str
        +position_limit: float
        +commission_rate: float
        +get_prices(prices: NDArray) NDArray
    }

    class TickerUniverse {
        +tickers: list<Ticker>
        +from_algothon() TickerUniverse
        +get(identifier: int | str) Ticker
        +as_price_matrix() NDArray
        +__iter__() Iterator[Ticker]
        +__len__() int
    }

    class Strategy {
        <<abstract>>
        +name: str
        +current_positions: NDArray
        +get_positions(price_history: NDArray) NDArray
        +reset() None
    }

    class SignalModel {
        <<abstract>>
        +compute(price_history: NDArray) NDArray
    }

    class PositionAllocator {
        <<abstract>>
        +allocate(
            signal: NDArray,
            latest_prices: NDArray,
            current_positions: NDArray
        ) NDArray
    }

    class Backtester {
        +run(
            strategy: Strategy,
            universe: TickerUniverse
        ) BacktestResult
    }

    class BacktestResult {
        +position_history: NDArray
        +trade_history: NDArray
        +daily_pnl: NDArray
        +commissions: NDArray
        +score: float
        +sharpe: float
        +max_drawdown: float
    }

    class MarketConstraints {
        +position_limits: NDArray
        +commission_rates: NDArray
    }

    class StrategyVisualizer {
        +ticker: Ticker
        +strategy: Strategy
        +plot_price(prices: NDArray) Figure
        +plot_positions(prices: NDArray) Figure
        +plot_price_and_positions(prices: NDArray) Figure
        -calculate_position_history(prices: NDArray) NDArray
    }

    TickerUniverse "1" *-- "51" Ticker
    TickerUniverse *-- MarketConstraints

    Strategy *-- SignalModel
    Strategy *-- PositionAllocator

    Backtester *-- TickerUniverse
    Backtester --> BacktestResult : produces
    Backtester --> Strategy : evaluates

    StrategyVisualizer --> Ticker
    StrategyVisualizer --> Strategy